# TidaLuna

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  comments.json  default.nix  devenv.nix  esbuild.config.ts  flake.nix  install_linux.sh  install_macos.sh  install_windows.bat  package.json  pnpm-lock.yaml  pr_comments.txt  shell.nix  tsconfig.json  verify_fix.sh
.github/workflows/: build.yml  flake-review.yml  releaseDev.yml  releaseMaster.yml
frontend/: package.json
frontend/src/: index.ts
native/: injector.ts  package.json  preload.ts  tidalHifiCompat.ts  update.ts
native/NativeModule/: secureLoad.ts
nix/: darwin-package.nix  default.nix  injection-darwin.nix  injection-linux.nix  package.nix
plugins/lib/: package.json
plugins/lib.native/src/: update.ts
plugins/lib/src/redux/: intercept.ts
plugins/ui/: package.json
plugins/ui/src/: index.tsx  injectReact.tsx
plugins/ui/src/SettingsPage/: index.tsx
plugins/ui/src/SettingsPage/PluginStoreTab/: index.tsx
plugins/ui/src/SettingsPage/PluginsTab/: ErrorActionButtons.tsx  LunaPluginHeader.tsx  LunaPluginSettings.tsx  PluginSearchBar.tsx  PluginStatusBadge.tsx  index.tsx
plugins/ui/src/components/: LunaSwitch.tsx  LunaTitle.tsx
plugins/ui/src/react/: intercept.tsx
render/src/: LunaPlugin.ts  index.ts  trustDialog.ts
src/: decrypt.rs  main.rs  player.rs  server.rs  state.rs
